Fix privacy logos on mobile

--- a/style/style.less
+++ b/style/style.less
@@ -184,7 +184,7 @@ details {
 
 input + .privacyLogo {
   position: absolute;
-  right: 0.5em;
+  right: -1.5em;
   top: 0.1em;
 }
 textarea + .privacyLogo {
