--- a/views/NetworkView/style.less
+++ b/views/NetworkView/style.less
@@ -11,7 +11,7 @@
     align-items: center;
     justify-content: space-around;
     flex-flow: row wrap;
-    padding-right: 2em;
+    margin-right: 2em;
     & > div {
       white-space: nowrap;
     }
@@ -20,7 +20,9 @@
       box-shadow: 0 0 0 6px @backgroundColor, 0 0 0 9px @focusColor;
     }
     .privacyLogo {
+      display: block;
       top: 0.6em;
+      right: -2.5em;
     }
   }
   .new.field .privacyLogo {
