--- a/views/TablesView/style.less
+++ b/views/TablesView/style.less
@@ -1,5 +1,5 @@
 .TablesView {
-  .exampleData {
+  .exampleTableData {
     display: flex;
     justify-content: space-around;
     flex-flow: row wrap;
@@ -12,8 +12,8 @@
     }
     .privacyLogo {
       position: absolute;
-      right: 0;
-      bottom: 1.5em;
+      right: -1.5em;
+      bottom: 1em;
     }
     table {
       min-width: 15em;
